[build-system]
requires = ["setuptools>=45,<70.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "dorothy-cci"
version = "0.0.61"
authors = [
  { name="Louis McCallum", email="louisbusby@yahoo.com" },
]
description = "A Creative Computing Python Library for Interactive Audio Generation and Audio Reactive Drawing"
readme = "README.md"
requires-python = ">=3.10,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "audioread==3.0.1",
  "certifi==2023.11.17",
  "cffi>1.16.0",
  "charset-normalizer==3.3.2",
  "colour==0.1.5",
  "decorator==5.1.1",
  "idna==3.6",
  "imageio==2.34.2",
  "joblib==1.3.2",
  "lazy_loader==0.4",
  "librosa==0.11.0",
  "llvmlite>0.43.0",
  "moviepy==2.1.1",
  "msgpack>=1.0.7",
  "numba>0.60.0",
  "numpy>=1.25.0",
  "opencv-python>=4.8.1.78",
  "packaging>=23.2",
  "pandas==2.3.2",
  "platformdirs==4.1.0",
  "pillow==10.4.0",
  "pooch==1.8.0",
  "psutil==5.9.6",
  "pycparser==2.21",
  "requests==2.31.0",
  "scikit-learn==1.7.2",
  "scipy>1.15.0",
  "sounddevice==0.4.6",
  "soundfile==0.12.1",
  "soxr==1.0.0",
  "threadpoolctl==3.2.0",
  "typing_extensions==4.15.0",
  "urllib3==2.1.0",
  "moderngl>=5.12.0",
  "moderngl-window>=3.1.1",
  "PyGLM>=2.8.2"
  ]

[project.urls]
Homepage = "https://github.com/Louismac/dorothy/"
Issues = "https://github.com/Louismac/dorothy/issues"

[tool.setuptools.packages.find]
where = ["."]